--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,9 +6,9 @@ services:
       target: runner
     environment:
       - NODE_ENV=production
-      - NEXT_PUBLIC_API_URL=http://localhost:5000
+      - NEXT_PUBLIC_API_URL=http://localhost:5000/api
     ports:
-      - "3005:3000"
+      - "3000:3000"
     depends_on:
       - backend
     restart: unless-stopped
